--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "recharts": "^2.5.0"
+    "recharts": "^2.5.0",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "vite": "^4.0.0",
