--- a/package.json
+++ b/package.json
@@ -13,11 +13,9 @@
     "recharts": "^2.5.0",
     "react-router-dom": "^6.22.3"
   },
-  "devDependencies": {
-    "vite": "^4.0.0",
-    "tailwindcss": "^3.0.0",
-    "postcss": "^8.4.0",
-    "autoprefixer": "^10.4.0",
-    "@vitejs/plugin-react": "^4.0.0"
+ "devDependencies": {
+  "autoprefixer": "^10.4.0",
+  "postcss": "^8.4.0",
+  "tailwindcss": "^3.0.0"
   }
 }
